# rustdesk_plugin_template

./: README.md
rustdesk_plugin_template_rust/: Cargo.toml  README.md
rustdesk_plugin_template_rust/libs/plugin_base/: Cargo.toml
rustdesk_plugin_template_rust/libs/plugin_base/src/: call.rs  desc.rs  errno.rs  handler.rs  init.rs  lib.rs
rustdesk_plugin_template_rust/libs/plugin_common/: Cargo.toml
rustdesk_plugin_template_rust/libs/plugin_common/src/: lib.rs  plog.rs
rustdesk_plugin_template_rust/src/: api.rs  call.rs  desc.rs  lib.rs
