[package]
name = "plugin_template"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "plugin_template"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
log = "0.4"
libc = "0.2.141"

[dev-dependencies]
dlopen = "0.1"
